<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.gravitykerala.universityofcalicut.VC">

    <include layout="@layout/toolbar_default" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView6"
        android:layout_below="@+id/toolbar"
        android:layout_alignRight="@+id/multiple_actions"
        android:layout_alignEnd="@+id/multiple_actions"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:layout_below="@+id/include">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView18"
                    android:src="@drawable/img_home_vc"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Vice Chancellor&apos;s Message"
                    android:id="@+id/textView28"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/vc"
                android:id="@+id/textView30"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/vc_msg1"
                android:id="@+id/textView31"
                android:textColor="@color/black"
                android:padding="3dp"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/vc_msg"
                android:id="@+id/textView29"
                android:textColor="@color/black"
                android:layout_weight="4.64"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="55dp" />

        </LinearLayout>
    </ScrollView>

    <net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"

        android:layout_width="match_parent"
        android:layout_height="261dp"
        style="@style/FabStyle"


        fab:fab_addButtonColorNormal="@color/primary"
        fab:fab_addButtonColorPressed="#fff"
        fab:fab_addButtonPlusIconColor="@color/black"
        fab:fab_labelStyle="@style/menu_labels_style"


        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/a"
            android:layout_width="5dp"
            android:layout_height="5dp"
            fab:fab_colorNormal="@color/primary_dark"
            fab:fab_title="Talk to VC"


            fab:fab_colorPressed="#fff"

            fab:fab_size="mini" />


        <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
        <!--android:id="@+id/action_news"-->
        <!--android:layout_width="10dp"-->
        <!--android:layout_height="10dp"-->
        <!--fab:fab_colorNormal="@color/white"-->
        <!--fab:fab_title="News"-->
        <!--fab:fab_size="mini"-->
        <!--fab:fab_colorPressed="@color/white_pressed"/>-->


        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/b"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"


            fab:fab_colorNormal="@color/primary_dark"
            fab:fab_title="VC's programme"


            fab:fab_colorPressed="#fff" />

        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/c"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"


            fab:fab_colorNormal="@color/primary_dark"
            fab:fab_title="VC's profile"


            fab:fab_colorPressed="#fff" />

        <!--<net.i2p.android.ext.floatingactionbutton.FloatingActionButton-->
        <!--android:id="@+id/d"-->

        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--fab:fab_size="mini"-->


        <!--fab:fab_colorNormal="@color/primary_dark"-->
        <!--fab:fab_title="Results"-->


        <!--fab:fab_colorPressed="#fff"/>-->


    </net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout>
